# ModularDecomposition

./: .gitignore  CMakeLists.txt  LICENSE  README.md  graph.cpp  graph.hpp  main.cpp  modDecomp.cpp  modDecomp.hpp  oldGraph.cpp
